WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60067
-[DOMRange textRects] returns incorrect results for vertical or flipped text
https://bugs.webkit.org/show_bug.cgi?id=60067
Summary
-[DOMRange textRects] returns incorrect results for vertical or flipped text
mitz
Reported
2011-05-03 14:55:18 PDT
[DOMRange textRects] returns incorrect results for vertical or flipped text
Attachments
Patch
(3.45 KB, patch)
2011-05-03 15:00 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-05-03 14:55:40 PDT
<
rdar://problem/8891395
>
mitz
Comment 2
2011-05-03 15:00:32 PDT
Created
attachment 92140
[details]
Patch
mitz
Comment 3
2011-05-03 15:34:02 PDT
Fixed in
r85677
<
http://trac.webkit.org/changeset/85677
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug